crates/testing/proc_macros/tests/ui/safe_test_has_too_many_args.stderr
error: custom attribute panicked
 --> tests/ui/safe_test_has_too_many_args.rs:9:5
  |
9 |     #[safe_test(a, b)]
  |     ^^^^^^^^^^^^^^^^^^
  |
  = help: message: `"a, b"` is not a valid identifier
